<resources>
    <string name="app_name">JuiceMe</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="history_header">History</string>
    <string name="store_history">Store History</string>
    <string name="dial_action_header">Dial action</string>
    <string name="dial_action_title">Automatically dial</string>
    <string name="dial_action_summary_off">Will require manual dialing if valid number is found</string>
    <string name="dial_action_summary_on">Will automatically dial if valid number is found</string>
    <string name="store_history_summary_on">Store found numbers for future use</string>
    <string name="store_history_summary_off">Do not store found numbers for future use</string>
    <string name="about_header">About</string>
    <string name="menu_redial">REDIAL</string>
    <string name="menu_delete">DELETE</string>
    <string name="delete_confirmation_title">Are you sure you want to delete?</string>
    <string name="delete_confirmation">Once deleted you won\'t be able to recover it!</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="images_header">Images</string>
    <string name="delete_images_title">Delete generated images</string>
    <string name="images_summary_off">Produced images will not be deleted</string>
    <string name="images_summary_on">Will automatically delete produced images</string>
    <string name="results">Results will be displayed here!</string>
    <string name="capture">Capture</string>
    <string name="topup">Top up</string>
    <string name="dial_codes_header">Network provider</string>
    <string name="dial_codes">Network</string>
    <string name="automatically_detect_network">Detect network provider</string>
    <string name="automatically_detect_summary_off">Choose the network below</string>
    <string name="network_not_in_list">The detected network carrier is unknown.</string>
    <string name="failed_to_automatically_detect_network">Failed to detect network carrier</string>
    <string name="permission_not_granted">No permissions where granted, the application will not function properly.</string>
    <string name="camera_no_permission">Cannot use the camera because the permission was not granted.</string>
    <string name="call_no_permission">Cannot use the call function because the permission was not granted.</string>
    <string name="error_extracting_text">There was an error extracting the numbers : %s</string>
    <string name="camera_initialisation_failed">The camera failed to initialise.</string>
    <string name="detect_network">Detect network</string>
    <string name="click_detect_network">Click to detect network</string>
    <string name="name_codes">The name and codes of the network used.</string>
    <string name="select_network">Selected network</string>
    <string name="custom_dial_code">Custom dial code</string>
    <string name="custom_dial_code_summary">Add a custom dial code that will be used to top up the airtime.</string>
    <string name="dial_code_changed">The dial code has been successfully changed</string>
    <string name="searching_for_network">Searching for the network, please wait!!</string>
    <string name="updated_the_network_details">The network details have been updated</string>
    <string name="cannot_recharge">Cannot recharge with invalid number</string>
    <string name="filePicker">Pick a file</string>
    <string name="menu_copy">COPY</string>
    <string name="recharge_code">Recharge code</string>
    <string name="copied_recharge_code">Copied %s</string>
    <string name="recharge_code_length">Recharge card length</string>
    <string name="recharge_code_length_summary">The number of digits the recharge codes should have</string>
    <string name="set_length">Click to change length</string>
    <string name="cannot_save_empty_length">Sorry, you can not save an empty length</string>
    <string name="ussd_length_not_digits_error">The length should be a number between 1 and 50</string>
    <string name="ussd_length_saved">The USSD length has been saved!!</string>
    <string name="enter_correct_code">Please enter a valid USSD code</string>
    <string name="nothing_to_display">Nothing to see here!</string>
    <string name="empty_tray_desc">empty tray</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="camera_btn_description">Take image with camera</string>
    <string name="phone_btn_description">Top up airtime</string>
    <string name="file_picker_btn_description">Select file</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="no_prefix_error">No USSD or prefix was found</string>
</resources>