<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/dial_codes_header"
        app:summary="@string/name_codes">
        <Preference
            app:key="network_carrier"
            app:title="@string/failed_to_automatically_detect_network"/>

        <Preference
            app:key="detect_network"
            app:title="@string/detect_network"
            app:summary="@string/click_detect_network" />

        <ListPreference
            app:key="select_network_carrier"
            app:title="@string/select_network"
            app:entryValues="@array/network_codes_values"
            app:entries="@array/network_codes_entries" />

        <SwitchPreferenceCompat
            app:key="custom_dial_code"
            app:title="@string/custom_dial_code"
            app:summary="@string/custom_dial_code_summary" />

        <EditTextPreference
            app:key="custom_dial_code_et"
            app:title="@string/custom_dial_code" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/recharge_code_length">
        <EditTextPreference
            app:key="recharge_code_length_et"
            app:title="@string/recharge_code_length"
            app:summary="@string/recharge_code_length_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/history_header">
        <SwitchPreferenceCompat
            app:key="store_history"
            app:title="@string/store_history"
            app:summaryOn="@string/store_history_summary_on"
            app:summaryOff="@string/store_history_summary_off"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/dial_action_header">
        <SwitchPreferenceCompat
            app:key="dial_action"
            app:summaryOff="@string/dial_action_summary_off"
            app:summaryOn="@string/dial_action_summary_on"
            app:title="@string/dial_action_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/images_header">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            app:key="images"
            app:summaryOff="@string/images_summary_off"
            app:summaryOn="@string/images_summary_on"
            app:title="@string/delete_images_title" />

    </PreferenceCategory>

</PreferenceScreen>